--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
-* {
+*,
+*:before,
+*:after {
 	margin: 0;
 	padding: 0;
 	text-decoration: none;
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 
 body {
@@ -12,5 +16,5 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background-color: #040506;
-	color: white;
+	position: relative;
 }
